kyverno-app/chg-image-pull-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    policies.kyverno.io/type: mutation
    policies.kyverno.io/description: >-
      Busca los Pods que utilicen imágenes "latest" para cambiar su imagePullPolicy a "IfNotPresent"  
  name: cambiar-image-pull-policy
spec:
  rules:
    - name: cambiar-image-pull-policy
      match:
        any:
        - resources:
            kinds:
            - Pod
      exclude:
        any:
        - resources:
            namespaces:
            - argocd
            - ingress-nginx
            - default
            - policy-reporter
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              # Busca imágenes que su versión sea latest
              - (image): "*:latest"
                # Si coincide cambia su política de pull image a IfNotPresent
                imagePullPolicy: "IfNotPresent"
