kyverno-app/restringir-nodeport.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-nodeport
  annotations:
    policies.kyverno.io/description: >-
     Con esta política vamos bloquear la creación de los servicios NodePort.
spec:
  validationFailureAction: enforce
  rules:
  - name: block-nodeport
    match:
      resources:
        kinds:
        - Service
    validate:
      message: "Servicios de tipo NodePort no se encuentran permitidos."
      pattern:
        spec:
          type: "!NodePort"
